--- a/style.css
+++ b/style.css
@@ -11,6 +11,23 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
+a {
+  color: #2d7788;
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #1a454f;
+}
+
+a:focus {
+  text-decoration: none;
+}
+
 p {
   line-height: 1.5;
 }
@@ -47,13 +64,28 @@ p {
   color: #fff;
 }
 
+.sidebar-wrapper .name {
+  font-size: 32px;
+  font-weight: 900;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.sidebar-wrapper .tagline {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .sidebar-wrapper .profile {
   margin-bottom: 15px;
 }
 
-.sidebar-wrapper .contact-list .svg-inline--fa {
+.sidebar-wrapper .contact-list {
   margin-right: 5px;
-  font-size: 18px;
+  font-size: 15px;
   vertical-align: middle;
 }
 
@@ -81,6 +113,34 @@ p {
   margin-bottom: 15px;
 }
 
+.sidebar-wrapper .degree {
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.sidebar-wrapper .education-container .item {
+  margin-bottom: 15px;
+}
+
+.sidebar-wrapper .education-container .item:last-child {
+  margin-bottom: 0;
+}
+
+.sidebar-wrapper .education-container .meta {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 500;
+  margin-bottom: 0px;
+  margin-top: 0;
+  font-size: 14px;
+}
+
+.sidebar-wrapper .education-container .time {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 500;
+  margin-bottom: 0px;
+}
+
 .sidebar-wrapper .languages-container .lang-desc {
   color: rgba(255, 255, 255, 0.6);
 }
@@ -96,66 +156,148 @@ p {
 .sidebar-wrapper .languages-list li:last-child {
   margin-bottom: 0;
 }
- 
-#left-part {
-            background: #fcfcff;
-            float: left;
-            width: 850px;
-            height: 800px;
-}
- 
-#clear {
-            clear:both;
-}
 
-.name {
-  font-size: 32px;
-  font-weight: 900;
-  margin-top: 20;
-  margin-bottom: 10px;
-}
-
-.tagline {
-  color: #06517c;
-  font-size: 16px;
-  font-weight: 400;
-  margin-top: 0;
+.sidebar-wrapper .interests-list {
   margin-bottom: 0;
 }
 
-.marg {
-            margin-left: 70px;
+.sidebar-wrapper .interests-list li {
+  margin-bottom: 10px;
 }
 
-.italic {
-            font-size: 20px;
-            font-style: italic;
+.sidebar-wrapper .interests-list li:last-child {
+  margin-bottom: 0;
 }
 
-.text {
-             font-size: 14px;
-             margin-right: 200px;
+.main-wrapper {
+  background: #fff;
+  padding: 60px;
+  padding-right: 300px;
 }
 
-.my-title {
-             color: #06517c;
-             font-size: 16px;
-             font-weight: bold;
+.main-wrapper .section-title {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+  color: #2d7788;
+  position: relative;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.main-wrapper .section-title .icon-holder {
+  width: 30px;
+  height: 30px;
+  margin-right: 8px;
+  display: inline-block;
+  color: #fff;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  background: #2d7788;
+  text-align: center;
+  font-size: 16px;
+  position: relative;
+  top: -8px;
+}
+
+.main-wrapper .section-title .icon-holder .svg-inline--fa {
+  font-size: 14px;
+  margin-top: 6px;
+}
+
+.main-wrapper .section {
+  margin-bottom: 60px;
+}
+
+.main-wrapper .experiences-section .item {
+  margin-bottom: 30px;
+}
+
+.main-wrapper .upper-row {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 2px;
+}
+
+.main-wrapper .job-title {
+  color: #3F4650;
+  font-size: 16px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 500;
+}
+
+.main-wrapper .time {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #97AAC3;
+}
+
+.main-wrapper .company {
+  margin-bottom: 10px;
+  color: #97AAC3;
+}
+
+.main-wrapper .project-title {
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.main-wrapper .projects-section .intro {
+  margin-bottom: 30px;
+}
+
+.main-wrapper .projects-section .item {
+  margin-bottom: 15px;
+}
+
+.skillset .item {
+  margin-bottom: 15px;
+  overflow: hidden;
+}
+
+.skillset .level-title {
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.skillset .level-bar {
+  height: 12px;
+  background: #f5f5f5;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+
+.skillset .theme-progress-bar {
+  background: #68bacd;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .round {
-            border-radius: 150px; /* Радиус скругления */
-            border: 1px green; /* Параметры рамки */
-            box-shadow: 0 0 7px #666; /* Параметры тени */
+ border-radius: 150px; /* Радиус скругления */
+ border: 1px green; /* Параметры рамки */
+ box-shadow: 0 0 7px #666; /* Параметры тени */
 }
-
-.center {
-            text-align: center;
-}
-
-.box {
-            display: flex;
-            align-items:center;
-}
-
- 
